--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,53 @@
+---
+import Header from "@/components/layout/Header.astro";
+import Footer from "@/components/layout/Footer.astro";
+import '@fontsource/forum';
+import { ClientRouter } from "astro:transitions";
+interface Props {
+	title?: string;
+	description?: string;
+	class?: string;
+}
+
+const{ 
+		title = 'Casa Montis Restaurante', 
+		description = 'Restaurante de comida Gourmet en Palermo - Huila, Disfruta de la mejor comida de la región, con un ambiente acogedor y un servicio excepcional. Aqui encontrarás una amplia 	variedad de platos de alta calidad, desde platos tradicionales hasta platos innovadores.', 
+		class: className 
+	} = Astro.props;
+
+---
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/webp" href="/logo.webp" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="description" content={description} />
+		<link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+		<title>{title}</title>
+		<ClientRouter />
 	</head>
-	<body>
+	<body class={`${className} animate-fade`}>
+		<img src="/bg.webp" class=" fixed object-cover top-0 left-0 w-full h-full z-[-1] " alt="">
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
 <style>
-	html,
-	body {
+	@import url('https://fonts.cdnfonts.com/css/satoshi');
+	:root {
+		scrollbar-color: #4848484a transparent;
+		scrollbar-width: thin;
+		scroll-behavior: smooth;
+	}
+	html, body {
+		background-color: #0A0B0A;
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		font-family: 'Forum', system-ui;
 	}
 </style>
