Corregir la capitalización del archivo SVG de la estrella en el componente Acerca de

--- a/src/pages/acercade.astro
+++ b/src/pages/acercade.astro
@@ -1,7 +1,7 @@
 ---
 import TitleArrow from "@/components/TitleArrow.astro";
 import Layout from "@/layouts/Layout.astro";
-import Star from "@/assets/svg/Star.svg";
+import Star from "@/assets/svg/star.svg";
 import Carrusel from "@/components/Carrusel.astro";
 import Sections from "@/components/Sections.astro";
 ---
