Actualizar imágenes a formato webp en los componentes Header, Acerca de, Contactos e Index; ajustar estilos en Header y Index.

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -2,10 +2,9 @@
 import Arrows from "../Arrows.astro"
 import ButtonHC from "../ButtonHClose.astro"
 import ButtonHO from "../ButtonHOpen.astro"
-import TitleArrow from "../TitleArrow.astro"
 ---
 <header class="fixed z-[9999] top-10 lg:top-12 xl:top-16 left-1/2 -translate-x-1/2 sm:left-16 sm:translate-x-0 md:left-1/2 md:-translate-x-1/2 xl:left-16 xl:translate-x-0 size-auto font-texto">
-    <div class="w-auto h-16 gap-4 bg-bg-main text-text-light py-4 px-3 rounded-xl flex items-center justify-between">
+    <div class="w-auto h-16 gap-4 bg-bg-main text-text-light py-4 pl-3 pr-4 rounded-xl flex items-center justify-between">
 
         <!-- Diálogo del menú -->
         <dialog id="myDialog" class=" lg:hidden p-8 size-full bg-[#111111] rounded-2xl border border-text-light/20 overflow-hidden" closedby="any">
@@ -29,7 +28,7 @@ import TitleArrow from "../TitleArrow.astro"
         </a>
         
         <!-- Menú de navegación -->
-        <nav class="hidden lg:flex items-center text-sm font-light gap-3">
+        <nav class="hidden lg:flex items-center text-xs font-bold gap-3">
             <a href="/menu" class=" p-2 rounded-lg hover:bg-text-light/5 transition-colors">MENÚ</a>
             <a href="/acercade" class=" p-2 rounded-lg hover:bg-text-light/5 transition-colors">ACERCA DE</a>
             <a href="/contactos" class=" p-2 rounded-lg hover:bg-text-light/5 transition-color">CONTACTO</a>
