--- a/src/pages/acercade.astro
+++ b/src/pages/acercade.astro
@@ -23,7 +23,7 @@ import Sections from "@/components/Sections.astro";
             </article>
 
             <article class=" bg-bg-main/50 flex flex-col justify-between md:col-span-5 border border-text-light/20 rounded-2xl">
-                <Carrusel img1="/img/acercade/1.jpg" img2="/img/acercade/2.jpg" img3="/img/acercade/3.jpg" />
+                <Carrusel img1="/img/acercade/1.webp" img2="/img/acercade/2.webp" img3="/img/acercade/3.webp" />
             </article>
 
             <article class=" bg-bg-main/50  p-9 md:col-span-11 h-36 border border-text-light/20 rounded-2xl">
@@ -41,7 +41,7 @@ import Sections from "@/components/Sections.astro";
             </article>
 
             <article class=" bg-bg-main/50 md:col-span-5 border border-text-light/20 rounded-2xl">
-                <Carrusel img1="/img/acercade/4.jpg" img2="/img/acercade/5.jpg" img3="/img/acercade/6.jpg" />
+                <Carrusel img1="/img/acercade/4.webp" img2="/img/acercade/5.webp" img3="/img/acercade/6.webp" />
             </article>
 
             <article class=" bg-bg-main/50 flex flex-col justify-between p-9 md:col-span-6 gap-8 border border-text-light/20 rounded-2xl">
