--- a/src/pages/contactos.astro
+++ b/src/pages/contactos.astro
@@ -46,10 +46,10 @@ const srcImage = (image: string) => {
 
             <article class=" grid grid-cols-2 grid-rows-2 gap-4 rounded-2xl">
                 
-                <Image src={srcImage('foto1.jpg')} alt={'Foto'} width={200} height={150} class="w-full h-full aspect-square object-cover rounded-2xl"></Image>
-                <Image src={srcImage('foto2.jpg')} alt={'Foto'} width={200} height={150} class="w-full h-full aspect-square object-cover rounded-2xl"></Image>
-                <Image src={srcImage('foto3.jpg')} alt={'Foto'} width={200} height={150} class="w-full h-full aspect-square object-cover rounded-2xl"></Image>
-                <Image src={srcImage('foto4.jpg')} alt={'Foto'} width={200} height={150} class="w-full h-full aspect-square object-cover rounded-2xl"></Image>
+                <Image src={srcImage('foto1.webp')} alt={'Foto'} width={200} height={150} class="w-full h-full aspect-square object-cover rounded-2xl"></Image>
+                <Image src={srcImage('foto2.webp')} alt={'Foto'} width={200} height={150} class="w-full h-full aspect-square object-cover rounded-2xl"></Image>
+                <Image src={srcImage('foto3.webp')} alt={'Foto'} width={200} height={150} class="w-full h-full aspect-square object-cover rounded-2xl"></Image>
+                <Image src={srcImage('foto4.webp')} alt={'Foto'} width={200} height={150} class="w-full h-full aspect-square object-cover rounded-2xl"></Image>
             </article>
 
             <article class=" relative border border-text-light/20 rounded-2xl">
