--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,13 @@ import Itemslide from '@/components/Itemslide.astro';
 <Layout title="Casa Montis" description="Restaurante Casa Montis, ubicado en el corazón del Huila, Palermo. Disfruta de una experiencia gastronómica única con nuestros deliciosos platos y un ambiente acogedor. ¡Te esperamos!">
 	<main class="flex flex-col xl:flex-row gap-4 p-4 xl:p-6 w-full h-auto xl:h-screen">
     
-		<section class=" bg-[url(/img/home/home.webp)] relative bg-cover bg-center bg-no-repeat rounded-2xl xl:w-3/4 h-[23.5rem] md:h-[45rem] lg:h-[37rem] xl:h-full">
-
-			<div class=" size-full rounded-xl bg-gradient-to-b from-transparent from-10% via-transparent via-60%  to-black/50 to-90% "></div>
+		<section class="relative bg-cover bg-center bg-no-repeat rounded-2xl xl:w-3/4 h-[23.5rem] md:h-[45rem] lg:h-[37rem] xl:h-full overflow-hidden">
+			<img 
+				src="/img/home/home.webp"
+				alt="Casa Montis Restaurante"
+				class=" absolute size-full object-cover"
+			/>
+			<div class="absolute size-full rounded-xl bg-gradient-to-b from-transparent from-10% via-transparent via-60%  to-black/50 to-90% "></div>
 			<h1 class=" text-4xl sm:text-8xl xl:text-9xl absolute text-text-light bottom-2 sm:bottom-8 left-3 sm:left-14 animate-fade animate-delay-500">
 				SENSACION<br>
 				GOURMET
