--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,6 @@ const{
 		<link rel="icon" type="image/webp" href="/logo.webp" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content={description} />
-		<link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
 		<title>{title}</title>
 		<ClientRouter />
 	</head>
@@ -35,17 +34,49 @@ const{
 </html>
 
 <style>
-	@import url('https://fonts.cdnfonts.com/css/satoshi');
+	@font-face {
+		font-family: 'Satoshi';
+		src: url('/src/assets/fonts/Satoshi_Complete/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Variable.woff2') format('woff2'),
+				url('/src/assets/fonts/Satoshi_Complete/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Variable.woff') format('woff');
+		font-display: swap;
+		font-weight: 100 900;
+		font-style: normal;
+	}
+	
+	@font-face {
+		font-family: 'Satoshi';
+		src: url('/src/assets/fonts/Satoshi_Complete/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-VariableItalic.woff2') format('woff2'),
+				url('/src/assets/fonts/Satoshi_Complete/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-VariableItalic.woff') format('woff');
+		font-display: swap;
+		font-weight: 100 900;
+		font-style: italic;
+	}
+
+	@font-face {
+		font-family: 'Satoshi';
+		src: url('/src/assets/fonts/Satoshi_Complete/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.woff2') format('woff2'),
+				url('/src/assets/fonts/Satoshi_Complete/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.woff') format('woff');
+		font-display: swap;
+		font-weight: 100 900;
+		font-style: normal;
+	}
+	
 	:root {
 		scrollbar-color: #4848484a transparent;
 		scrollbar-width: thin;
 		scroll-behavior: smooth;
 	}
+	
 	html, body {
 		background-color: #0A0B0A;
 		margin: 0;
 		width: 100%;
 		height: 100%;
 		font-family: 'Forum', system-ui;
+		font-display: swap;
+	}
+	
+	.font-texto {
+		font-family: 'Satoshi', sans-serif !important;
 	}
 </style>
