Reemplazar y optimizar imágenes JPG por WEBP en el blog y actualizar el componente de menú en la página de inicio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,11 +37,7 @@ import Itemslide from '@/components/Itemslide.astro';
 
 		<section class=" flex flex-col lg:flex-row xl:flex-col gap-4 w-full xl:w-1/4 h-full">
 			
-			<Itemslide 
-				title="MENÚ" 
-				link="/menu" 
-				images={["ceviche.jpg", "viudo_bagre.jpg", "viudo_bocachico.jpg", "paella.jpg", "arroz_pollo.jpg", "cazuela_mariscos.jpg", "mojarra_frita.jpg", "huevos_amor.jpg", "arroz_camaron.jpg", "arroz_mixto.jpg"]} 
-			/>
+			<Items title="MENÚ" link="/menu" image="menu2.webp" />
 			
 			<Items title="CONTACTOS" link="/contactos" image="contactos.webp" />
 			
