Agregar atributos aria-label a los botones de cerrar y abrir menú para mejorar la accesibilidad

--- a/src/components/ButtonHOpen.astro
+++ b/src/components/ButtonHOpen.astro
@@ -4,7 +4,7 @@ export interface Props {
 }
 const { id } = Astro.props;
 ---
-<button id={id}>
+<button id={id} aria-label="Botón para Abrir menú">
     <div></div>
     <div></div>
     <div></div>
