--- a/src/components/ButtonHClose.astro
+++ b/src/components/ButtonHClose.astro
@@ -4,7 +4,7 @@ export interface Props {
 }
 const { id } = Astro.props;
 ---
-<button id={id}>
+<button id={id} aria-label="Botón para Cerrar menú">
     <div></div>
     <div></div>
     <div></div>
