--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,10 +24,10 @@ import Itemslide from '@/components/Itemslide.astro';
 
 			<Badge class='h-[3.2rem]'>
 				<div class=" flex justify-center items-center gap-3">
-					<a href="https://www.facebook.com/MontisCasa" target="_blank" class=" p-[7px] border border-text-light/35 hover:border-text-light/80 transition-colors rounded-full">
+					<a href="https://www.facebook.com/MontisCasa" aria-label=" Link para la página de Facebook Casa Montis" target="_blank" class=" p-[7px] border border-text-light/35 hover:border-text-light/80 transition-colors rounded-full">
 						<Facebook height={17} width={17} />
 					</a>
-					<a href="https://wa.me/3132171025" target="_blank" class=" p-[7px] border border-text-light/35 hover:border-text-light/80 transition-colors rounded-full">
+					<a href="https://wa.me/3132171025" aria-label=" Link para contactarte con Casa Montis" target="_blank" class=" p-[7px] border border-text-light/35 hover:border-text-light/80 transition-colors rounded-full">
 						<Whatsapp height={17} width={17} />
 					</a>
 				</div>
