--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -28,7 +28,7 @@ const categoryTitles: Record<string, string> = {
 		/>
 
 		<!-- Ancla invisible para el scroll to top -->
-		<div id="top"></div>
+		<div id="top" aria-label=" Botón para subir al inicio de la página"></div>
 		<section id="menu-section" class="flex flex-col w-full xl:w-1/2 h-full border border-text-light/20 rounded-2xl px-4 lg:px-20 py-8  sm:py-[4.5rem] overflow-y-auto overflow-x-hidden scroll-smooth">
 			
 			<MenuNav />
