--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from "@/components/layout/Header.astro";
 import '@fontsource/forum';
 import { ClientRouter } from "astro:transitions";
+import Analytics from '@vercel/analytics/astro'
 interface Props {
 	title?: string;
 	description?: string;
@@ -25,6 +26,7 @@ const{
 		<meta name="description" content={description} />
 		<title>{title}</title>
 		<ClientRouter />
+		<Analytics/>
 	</head>
 	<body class={`${className} animate-fade`}>
 		<img src="/bg.webp" class=" fixed object-cover top-0 left-0 w-full h-full z-[-1] " alt="">
