--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -47,7 +47,9 @@ const { title, content, date, image, description } = Astro.props;
                 <h1 class=" text-4xl sm:text-6xl text-center font-light tracking-wider text-text-light">{title}</h1>
                 <Arrows/>
                 <p class=" text-2xl sm:text-4xl font-bold text-text-light mt-8">{description}</p>
-                <p class=" prose font-texto font-light text-text-light/80">{content}</p>
+                {content.split(' || ').map((parrafo: string) => (
+                    <p class=" font-texto font-light text-text-light/80">{parrafo.trim()}</p>
+                ))}
             </article>
 		</section>
 	</main>
