Reemplazar etiquetas img por componentes Flecha en Arrows.astro y TitleArrow.astro para mejorar la consistencia del código

--- a/src/components/Arrows.astro
+++ b/src/components/Arrows.astro
@@ -1,4 +1,7 @@
+---
+import Flecha from '@/assets/svg/flecha.svg';
+---
 <div class="flex items-center justify-center">
-    <img src="/src/assets/svg/flecha.svg" class=" w-8 h-auto rotate-180" alt="">
-    <img src="/src/assets/svg/flecha.svg" class=" w-8 h-auto" alt="">
+    <Flecha class={' w-8 h-auto rotate-180'}/>
+    <Flecha class={' w-8 h-auto '}/>
 </div>
