Corregir acentuación en el título "SENSACIÓN" para mejorar la precisión del contenido

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Itemslide from '@/components/Itemslide.astro';
 			/>
 			<div class="absolute size-full rounded-xl bg-gradient-to-b from-transparent from-10% via-transparent via-60%  to-black/50 to-90% "></div>
 			<h1 class=" text-4xl sm:text-8xl xl:text-9xl absolute text-text-light bottom-2 sm:bottom-8 left-3 sm:left-14 animate-fade animate-delay-500">
-				SENSACION<br>
+				SENSACIÓN<br>
 				GOURMET
 			</h1>
 
